html white space fixed

--- a/src/Components/Cart/Cart.scss
+++ b/src/Components/Cart/Cart.scss
@@ -11,11 +11,19 @@
     right: 0;
 
     @media screen and (max-width: 1200px) {
-        padding: 1rem 2.4rem;
+        padding: 5rem 2.4rem;
       }
     
       @media screen and (max-width: 550px) {
-        padding: 1rem 1.5rem;
+        padding: 5rem 1.5rem;
+
+        border: 3px solid blue;
+
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
       }
 }
 
@@ -29,10 +37,14 @@
     padding: 2rem;
 
     @media screen and (max-width: 900px) {
-        width: 80%;
+        width: 70%;
         position: relative;
         right: 0;
         top: 0;
+    }
+
+    @media screen and (max-width: 550px) {
+        width: 70%;
     }
 }
 
