--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -1,5 +1,6 @@
 .home {
-  width: 100%;
+  // width: 100%;
+  // border: 3px solid red;
 }
 
 .home__section {
